Viewport "World" Cavity Type Doesn't Render Anything #95284

Closed
opened 2022-01-28 14:33:24 +01:00 by Ari Sea · 27 comments

System Information
Operating system: macOS-12.2-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.103

Blender Version
Broken: After bisecting it looks like 5b299e5999 caused this.

Short description of error
The viewport's "World" cavity type doesn't work. 2 things that I think I should mention are that changing the cavity's sampling settings still slows down the viewport, and that the "Screen" cavity type still works.
Screenshot 2022-01-28 at 20.24.24.png

Also the behaviour of this error is different between Windows and macOS M1 .
Was used d29a079cb6 to compare both systems.
While rotating the cube on Windows the world cavity is visible. As soon as the middle mouse button is released the world cavity disappears completely.
On Mac the world cavity disappears completely while rotating the cube. When the middle mouse button is released the world cavity flashes to its full brightness and then the brightness is diminished to half or less but still visible.

Exact steps for others to reproduce the error

**System Information** Operating system: macOS-12.2-x86_64-i386-64bit 64 Bits Graphics card: AMD `Radeon R9 M370X` OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.103 **Blender Version** Broken: After bisecting it looks like 5b299e5999 caused this. **Short description of error** The viewport's "World" cavity type doesn't work. 2 things that I think I should mention are that changing the cavity's sampling settings still slows down the viewport, and that the "Screen" cavity type still works. ![Screenshot 2022-01-28 at 20.24.24.png](https://archive.blender.org/developer/F12831000/Screenshot_2022-01-28_at_20.24.24.png) Also the behaviour of this error is different between Windows and macOS M1 . Was used d29a079cb6 to compare both systems. While rotating the cube on Windows the world cavity is visible. As soon as the middle mouse button is released the world cavity disappears completely. On Mac the world cavity disappears completely while rotating the cube. When the middle mouse button is released the world cavity flashes to its full brightness and then the brightness is diminished to half or less but still visible. **Exact steps for others to reproduce the error** - Enable cavity - Set cavity type to "World" [broken_world_cavity.blend](https://archive.blender.org/developer/F12832854/broken_world_cavity.blend)
Author

Added subscriber: @PhlixFer

Added subscriber: @PhlixFer

#95513 was marked as duplicate of this issue

#95513 was marked as duplicate of this issue

#95473 was marked as duplicate of this issue

#95473 was marked as duplicate of this issue

#95425 was marked as duplicate of this issue

#95425 was marked as duplicate of this issue

#95399 was marked as duplicate of this issue

#95399 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't replicate the problem. Must be MacOS related.
GIF.gif


System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14760 Core Profile Context 20.45.37.01 27.20.14537.1001

I can't replicate the problem. Must be MacOS related. ![GIF.gif](https://archive.blender.org/developer/F12831741/GIF.gif) --- **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14760 Core Profile Context 20.45.37.01 27.20.14537.1001
Author

I should also mention, the Screen cavity type still works!

I should also mention, the Screen cavity type still works!

Added subscriber: @Pasang

Added subscriber: @Pasang

I can replicate the bug in my Windows machine.

I can replicate the bug in my Windows machine.

Added subscriber: @michael64

Added subscriber: @michael64

Can confirm on Windows and Mac. Jan 26 was the first daily build where the world cavity stopped working, while the daily build of Jan 25 still worked.
After bisecting it looks like 5b299e5999 caused this.

Also the behaviour of this error is different between Windows and macOS M1 .
Because some things have changed since then I am using d29a079cb6 to compare both systems.
While rotating the cube on Windows the world cavity is visible. As soon as the middle mouse button is released the world cavity disappears completely.
On Mac the world cavity disappears completely while rotating the cube. When the middle mouse button is released the world cavity flashes to its full brightness and then the brightness is diminished to half or less but still visible.
I also attached the blend file. broken_world_cavity.blend

Can confirm on Windows and Mac. Jan 26 was the first daily build where the world cavity stopped working, while the daily build of Jan 25 still worked. After bisecting it looks like 5b299e5999 caused this. Also the behaviour of this error is different between Windows and macOS M1 . Because some things have changed since then I am using d29a079cb6 to compare both systems. While rotating the cube on Windows the world cavity is visible. As soon as the middle mouse button is released the world cavity disappears completely. On Mac the world cavity disappears completely while rotating the cube. When the middle mouse button is released the world cavity flashes to its full brightness and then the brightness is diminished to half or less but still visible. I also attached the blend file. [broken_world_cavity.blend](https://archive.blender.org/developer/F12832854/broken_world_cavity.blend)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

In #95284#1297397, @PhlixFer wrote:
I should also mention, the Screen cavity type still works!

In fact it was a slip in the test. I can confirm.

> In #95284#1297397, @PhlixFer wrote: > I should also mention, the Screen cavity type still works! In fact it was a slip in the test. I can confirm.

Added subscriber: @slowburn

Added subscriber: @slowburn

I'm seeing a slightly different behaviour, but I think the cause might be related. For me World cavity still works but "Valley" effect (or AO) disappears once samples go over 18. Whereas "Ridge" effect gets progressively weaker with more samples and is basically invisible at 500 samples.

cavity_bug.jpg
Also the Cavity is much noisier overall than before.
Maybe the result is different because of different GPU, I'm using rtx 3060ti on Windows for example.

I'm seeing a slightly different behaviour, but I think the cause might be related. For me World cavity still works but "Valley" effect (or AO) disappears once samples go over 18. Whereas "Ridge" effect gets progressively weaker with more samples and is basically invisible at 500 samples. ![cavity_bug.jpg](https://archive.blender.org/developer/F12838032/cavity_bug.jpg) Also the Cavity is much noisier overall than before. Maybe the result is different because of different GPU, I'm using rtx 3060ti on Windows for example.

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

I was about to report this issue. Just want to mention and confirm that this isn't working on Linux also. It seems, visually, that the "Valley" is not working, I see that "Ridge" seems to be ok...

I was about to report this issue. Just want to mention and confirm that this isn't working on Linux also. It seems, visually, that the "Valley" is not working, I see that "Ridge" seems to be ok...

Added subscribers: @APEC, @iss

Added subscribers: @APEC, @iss
Member

Added subscribers: @SpectreFirst, @PratikPB2123

Added subscribers: @SpectreFirst, @PratikPB2123
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

@fclem , it appears to be your commit 5b299e5999. Can you check?

@fclem , it appears to be your commit 5b299e5999. Can you check?
Member

Added subscribers: @NahuelBelich, @lichtwerk

Added subscribers: @NahuelBelich, @lichtwerk

This issue was referenced by e7b8871d3d

This issue was referenced by e7b8871d3d36fbcd0807d3176be613693b6d8cf8

This issue was referenced by 8e0763827e

This issue was referenced by 8e0763827e3165eea26b52f62694e7360c1d05c7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2022-02-04 14:05:49 +01:00
Member

Added subscriber: @MarcoHoo-3

Added subscriber: @MarcoHoo-3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95284
No description provided.