Fix T95284 Workbench: "World" Cavity Type Doesn't Render Anything

This was caused by a faulty UBO bind (not updated after renaming).